added deleteChallenges
